--- a/style.css/home.css
+++ b/style.css/home.css
@@ -18,7 +18,7 @@
   .header {
       background-color: #fafafa;
       text-align: center;
-      padding: 20px;
+      padding: 100px 0;
     }
     p {
       font-size: 25px;
@@ -73,4 +73,5 @@
   margin: none;
   cursor: pointer;
   transition: opacity 0.3s ease;
+
 }
